[project]
name = "interaction-muon-silicium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "manim>=0.19.0",
    "matplotlib>=3.10.3",
    "pyqt5>=5.15.11",
    "setuptools>=80.9.0",
    "spyder-kernels>=3.0.5",
    "tqdm>=4.67.1",
]

[tool.pyright]
venvPath="./"
venv="./.venv/"
